crates/sui-prover/tests/snapshots/assert.scenario.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 277
expression: output
---
exiting with bytecode transformation errors
error: Scenario specs either ignore aborts or do not have any asserts.
   ┌─ tests/inputs/assert.scenario.fail.move:14:5
   │  
14 │ ╭     fun scenario_spec(input: u64): u64 {
15 │ │         asserts(input != 10); // asserts are supported in scenario specs
16 │ │         let result = foo(input);
17 │ │         result
18 │ │     }
   │ ╰─────^
