crates/sui-prover/tests/snapshots/empty.ok.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 141
expression: output
---
🦀 No specifications found in the project. Nothing to verify.
