crates/sui-prover/tests/snapshots/ignore_abort-no_opaque.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::asserts conditions are not complete
   ┌─ tests/inputs/ignore_abort-no_opaque.move:12:1
   │  
12 │ ╭ fun foo_spec(x: u64): u64 {
13 │ │     foo(x)
14 │ │ }
   │ ╰─^
   │  
   =     at tests/inputs/ignore_abort-no_opaque.move:12: foo_spec
