crates/sui-prover/tests/snapshots/ignore_aborts_by_function_bad_name.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: asserts_of("nonexistent"): function not found in module foo. Use a qualified name like "module::function"
   ┌─ tests/inputs/ignore_aborts_by_function_bad_name.fail.move:10:1
   │  
10 │ ╭ fun foo_spec(x: u64): u64 {
11 │ │     prover::asserts(prover::asserts_of(b"nonexistent"));
12 │ │     foo(x)
13 │ │ }
   │ ╰─^
