crates/sui-prover/tests/snapshots/ignore_aborts_by_function_conditional.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: foo::bar_spec ignore_aborts
   ┌─ tests/inputs/ignore_aborts_by_function_conditional.fail.move:22:1
   │  
22 │ ╭ fun bar_spec(x: u64): u64 {
23 │ │     bar(x)
24 │ │ }
   │ ╰─^
   │  
   =     at tests/inputs/ignore_aborts_by_function_conditional.fail.move:14: foo_spec
