crates/sui-prover/tests/snapshots/ignore_aborts_by_function_no_spec.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: asserts_of("bar"): bar has no spec
   ┌─ tests/inputs/ignore_aborts_by_function_no_spec.fail.move:14:1
   │  
14 │ ╭ fun foo_spec(x: u64): u64 {
15 │ │     prover::asserts(prover::asserts_of(b"bar"));
16 │ │     foo(x)
17 │ │ }
   │ ╰─^
